[metadata]
name = Q_Learning_O_Run
version = 0.0.1
author = Godw
author_email = 353055619@qq.com
description = 用于Q-learning的学习,内含MDP环境和Q-learning决策大脑
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src